--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>client</title>
+    <style>
+      html {
+        font-size: 62.5%;
+      }
+    </style>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   </head>
   <body>
